// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlideDeck renders cognitive 1`] = `
<div
  className="mock"
>
  Cognitive
</div>
`;

exports[`SlideDeck renders personality 1`] = `
<div
  className="mock"
>
  Personality
</div>
`;
